# Embedded-2

./: README.md
autotools-project/: configure.ac
autotools-project-stm/: configure.ac
autotools-project-stm/src/: Makefile.am
autotools-project/include/: heartbeat.hpp  mock_hal.hpp  stm32l4xx.h
autotools-project/src/: Makefile.am  heartbeat.cpp  main.cpp  mock_hal.cpp
manual-makefile-project/: Makefile  Makefile.am
manual-makefile-project-stm/: Makefile
manual-makefile-project-stm/include/: mock_hal.hpp
manual-makefile-project-stm/src/: mock_hal.cpp
manual-makefile-project/src/: Makefile.am  heartbeat.cpp  main.cpp  mock_hal.cpp
