bin_PROGRAMS = heartbeat_sensor
heartbeat_sensor_SOURCES = main.cpp heartbeat.cpp system_stm32l4xx.c stm32l4xx_it.c stm32l4xx_hal_msp.c stm32l4xx_hal.c stm32l4xx_hal_gpio.c stm32l4xx_hal_rcc.c stm32l4xx_hal_pwr.c stm32l4xx_hal_cortex.c
heartbeat_sensor_CPPFLAGS = -I$(top_srcdir)/include
heartbeat_sensor_CFLAGS = -I$(top_srcdir)/include